# svelte-axum-backend

./: Cargo.toml  README.md  users.db
src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs
